src/test/resources/regression/xlang/passing/NonMutableGenerics1.scala
object NonMutableGenerics1 {

  def id[A](x: A): A = x

}
