src/test/resources/regression/xlang/error/ArrayAliasing6.scala
/* Copyright 2009-2016 EPFL, Lausanne */

object ArrayAliasing6 {

  def foo(a: Array[Int]): Array[Int] = {
    a
  }

}
